--- a/product.html
+++ b/product.html
@@ -8,9 +8,9 @@
 
         <nav class="navbar">
             <ul>
-                <li><a href="..\majesty\index.html">Home</a></li>
-                <li><a href="..\majesty\product.html">Products</a></li>
-                <li><a href="..\majesty\about.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="product.html">Products</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
 
